--- a/NavigationCodelab/app/build.gradle
+++ b/NavigationCodelab/app/build.gradle
@@ -106,6 +106,8 @@ dependencies {
     // Compose testing dependencies
     androidTestImplementation "androidx.compose.ui:ui-test-junit4"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
+    implementation "androidx.navigation:navigation-compose:2.6.0"
+    androidTestImplementation "androidx.navigation:navigation-testing:2.7.7"
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
